--- a/clientside/public/index.html
+++ b/clientside/public/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#000000">
-  <!--
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
 
-  <meta name="application-name" content="%REACT_APP_NAME%">
-  <meta name="description" content="%REACT_APP_DESCRIPTION%">
+    <meta name="application-name" content="%REACT_APP_NAME%">
+    <meta name="description" content="%REACT_APP_DESCRIPTION%">
 
-  <meta property="og:url" content="%PUBLIC_URL%">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="%REACT_APP_NAME%">
-  <meta property="og:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
-  <meta property="og:description" content="%REACT_APP_DESCRIPTION%">
-  <meta property="og:site_name" content="%REACT_APP_NAME%">
+    <meta property="og:url" content="%PUBLIC_URL%">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="%REACT_APP_NAME%">
+    <meta property="og:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
+    <meta property="og:description" content="%REACT_APP_DESCRIPTION%">
+    <meta property="og:site_name" content="%REACT_APP_NAME%">
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="%PUBLIC_URL%">
-  <meta name="twitter:title" content="%REACT_APP_NAME%">
-  <meta name="twitter:description" content="%REACT_APP_DESCRIPTION%">
-  <meta name="twitter:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="%PUBLIC_URL%">
+    <meta name="twitter:title" content="%REACT_APP_NAME%">
+    <meta name="twitter:description" content="%REACT_APP_DESCRIPTION%">
+    <meta name="twitter:image" content="%PUBLIC_URL%/img/screenshots/reduction-admin.jpg">
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <!-- <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/apple-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon-76x76.png" />
@@ -37,14 +37,14 @@
   <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/apple-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/apple-icon-152x152.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-icon-180x180.png" /> -->
-  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.ico"/>
-  <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-  <meta name="theme-color" content="#ffffff" />
-  <!--
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -53,36 +53,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>CPDMF</title>
+    <title>CPDMF</title>
 
-  <!-- Start Single Page Apps for GitHub Pages -->
-  <script type="text/javascript">
-    (function (l) {
-      if (l.search) {
-        var q = {};
-        l.search.slice(1).split('&').forEach(function (v) {
-          var a = v.split('=');
-          q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-        });
-        if (q.p !== undefined) {
-          window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + (q.p || '') +
-            (q.q ? ('?' + q.q) : '') +
-            l.hash
-          );
-        }
-      }
-    }(window.location))
-  </script>
-  <!-- End Single Page Apps for GitHub Pages -->
+    <!-- Start Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+        (function(l) {
+            if (l.search) {
+                var q = {};
+                l.search.slice(1).split('&').forEach(function(v) {
+                    var a = v.split('=');
+                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+                });
+                if (q.p !== undefined) {
+                    window.history.replaceState(null, null,
+                        l.pathname.slice(0, -1) + (q.p || '') +
+                        (q.q ? ('?' + q.q) : '') +
+                        l.hash
+                    );
+                }
+            }
+        }(window.location))
+    </script>
+    <!-- End Single Page Apps for GitHub Pages -->
 </head>
 
 <body>
-  <noscript>
+    <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root"></div>
-  <!--
+    <div id="root"></div>
+    <!-- Include Payhere JS library as follows -->
+    <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
